--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,9 @@
   "Authentication": {
     "ApiKey": ""
   },
+  "ConnectionStrings": {
+    "DatabaseConnectionString": "Host=;Port=;Database=;Username=;Password=;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
